--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -3,5 +3,6 @@ RUN dnf install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html 
 ADD https://raw.githubusercontent.com/peddireddylokesh/dockerfiles/refs/heads/main/run/Dockerfile  /usr/share/nginx/html/index.html
 RUN chmod +r /usr/share/nginx/html/index.html
+ADD sample-1.tar /tmp/
 CMD ["nginx","-g","daemon off;"]
 
