--- a/workdir/Dockerfile
+++ b/workdir/Dockerfile
@@ -2,7 +2,7 @@ FROM almalinux:9
 RUN mkdir /tmp/work-dir-demo 
 RUN cd /tmp/work-dir-demo
 RUN pwd
-RUN echo "Hello World" > /tmp/work-dir-demo/hello.txt
+RUN echo "Hello from work directory" > hello.txt
 CMD ["sleep","150"]
 
 
