--- a/arg/Dockerfile
+++ b/arg/Dockerfile
@@ -2,5 +2,6 @@ FROM almalinux:9
 ENV course="devops with aws"\
     trainer="ShivaKumar Reddy"\
     duration="3 months"
+ARG ${username:- some_user}
 RUN echo "course is ${course}" > /tmp/devops.txt
 CMD ["sleep","150"]
