--- a/arg/Dockerfile
+++ b/arg/Dockerfile
@@ -2,6 +2,6 @@ FROM almalinux:9
 ENV course="devops with aws"\
     trainer="ShivaKumar Reddy"\
     duration="3 months"
-ARG ${username:- some_user}
-RUN echo "this is username ${username}" > /tmp/devops.txt
+ARG username=loki
+RUN echo "this is username: ${username}"
 CMD ["sleep","150"]
