--- a/arg/Dockerfile
+++ b/arg/Dockerfile
@@ -3,5 +3,5 @@ ENV course="devops with aws"\
     trainer="ShivaKumar Reddy"\
     duration="3 months"
 ARG username=loki
-RUN echo "this is username: ${username}"
+RUN echo "this is username: ${username}" > /tmp/devops.txt
 CMD ["sleep","150"]
