--- a/arg/Dockerfile
+++ b/arg/Dockerfile
@@ -1,7 +1,8 @@
-FROM almalinux:9
+ARG version
+FROM almalinux:${version:-9}
 ENV course="devops with aws"\
     trainer="ShivaKumar Reddy"\
     duration="3 months"
 ARG username=loki
-RUN echo "this is username: ${username}" > /tmp/devops.txt
+RUN echo "Hello user : ${username}, image version : ${version}" > /tmp/devops.txt
 CMD ["sleep","150"]
